<resources>
    <string name="app_name">KITE Szervíz</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_main">Főmenü</string>
    <string name="title_activity_help">Információk és súgó</string>
    <string name="sync_app_name">KITE Szerviz Szinkronizáció</string>
    <string name="title_activity_login">Bejelentkezés</string>
    <string name="title_activity_partner_hozzaadas">Partner hozzáadása</string>
    <string name="title_activity_signature">Aláírás</string>
    <string name="action_settings">Settings</string>
    <string name="error_dialog_title">Hiba történt</string>
    <string name="error_dialog_message">Hibaüzenet: \n\n%1$s</string>
    <string name="dialog_gps_settings_title">GPS beálíltások</string>
    <string name="dialog_gps_is_not_enabled_message">GPS nem aktív. Az alkalmazás használatához be kell kapcsolni.</string>
    <string name="error_dialog_alkatresz_title">Alkatrész hozzáadás</string>
    <string name="error_dialog_alkatresz_message">A mennyiség nem lehet 0!</string>
    <string name="error_dialog_mennyiseg_format">A mennyiségnél megadott érték érvénytelen!</string>
    <string name="encrypt_message_empty">Az SD kártya nincs titkosítva.</string>
    <string name="encrypt_message_empty_desc">(A külső tárhelyed nincs titkosítva, ezért addig nem használhatod az alklamazást, amíg le nem titkosítod!(Kattints a \'Titkosítás\' gombra és kövesd a képernyőn megjelenő utasításokat)</string>
    <string name="title_activity_sync">Adatok szinkronizálása</string>
    <string name="signature_tap">Kattints ide, hogy aktiváld az aláírás oldalt</string>
    <string name="signature_label_clear">Törlés</string>
    <string name="signature_label_done">Kész</string>
    <string name="signature_name_hint">Ide gépeld a nevet</string>
    <string name="error_short_signature_title">Rossz aláírás</string>
    <string name="error_short_signature_message">Az aláírásod túl rövid! Kérlek próbáld meg hosszabban.</string>
    <string name="error_wromg_name_title">Rossz név</string>
    <string name="error_wromg_name_message">Kérlek gépeld be a nevet.</string>
    <string name="error_short_name_message">A név túl rövid.</string>
    <string name="dialog_ok">Rendben</string>
    <string name="dialog_close">Bezárás</string>
    <string name="dialog_cancel">Mégse</string>
    <string name="dialog_notshow">Ne mutassa többet</string>
    <string name="dialog_empty_field">Mező kiürítése</string>
    <string name="dummy_text">[Dummy Text For UI Editing]</string>
    <string name="dummy_text_large">Lorem ipsum dolor sit amet eros e nocturne abilis silencio ned cartographia a il sum lorem ipsum dolor sit amet.</string>
    <string name="dummy_text_short">Lorem ipsum</string>
    <string name="error_invalid_uname_pass">Invalid username or password</string>
    <string name="error_required_field">Kötelező mező</string>
    <string name="error_pip_not_required">PIP kód nem szükséges</string>
    <string name="login_user">Felhasználónév:</string>
    <string name="login_pass">Jelszó:</string>
    <string name="login_bt">Bejelentkezés</string>
    <string name="login_cb">Automatikus bejelentkezés</string>
    <string name="main_new_munkalap">Új munkalap felvétele</string>
    <string name="main_continue_munkalap">Nem befejezett munkalap folytatása</string>
    <string name="main_copy_munkalap">Korábbi munka folytatása új mai munkalapon</string>
    <string name="main_continue_munkalap_with_count">Nem befejezett munkalap \nfolytatása (%1$s db)</string>
    <string name="main_copy_munkalap_with_count">Korábbi munka folytatása új mai \nmunkalapon (%1$s db)</string>
    <string name="main_machine_info">Gép információk</string>
    <string name="main_own_munkalap">Saját munkalapok</string>
    <string name="main_partner_info">Partner információk</string>
    <string name="main_info">Információs anyagok</string>
    <string name="main_encrypt">Titkosítás</string>
    <string name="main_order">Megrendelés</string>
    <string name="main_regional_report">Új Területi Szemlejegyzőkönyv</string>
    <string name="main_meteo">Meteorológiai Adatok</string>
    <string name="main_agron_calendar">Agronómiai Naptár</string>
    <string name="main_catalog">Katalógus</string>
    <string name="main_price">Árjegyzék</string>
    <string name="main_meeting_log">Új Tárgyalási Napló</string>
    <string name="main_logout">Kijelentkezés</string>
    <string name="main_exit">Főmenü</string>
    <string name="main_help">Súgó</string>
    <string name="main_sync">Szinkronizáció</string>
    <string name="main_main">Főmenü</string>
    <string name="main_newdeal">Új Ügylet</string>
    <string name="main_prepare">Felkészülés</string>
    <string name="main_info_partner"><u>Partner:</u>\n%1$s\nTel:%2$s</string>
    <string name="main_info_partner_none">Nincs kiválasztott partner</string>
    <string name="main_exit_message">Nyomja meg még egyszer a vissza gombot a kilépéshez&#8230;</string>
    <string name="main_open_items">Nyitott munkalapok: %1$s db</string>
    <string name="version_string">Alkalmazás verzió: %1$s</string>
    <string name="dialog_sync_needed_title">Szinkronizáció</string>
    <string name="dialog_sync_needed_message">Az eszköz még nem volt szinkronizálva a szerveren található adatokkal. Ellenőrizd az internetkapcsolatod és kattints az OK gombra a szinkronizációhoz. Amíg nem szinkronizáltad a Táblagépet, addig nem tudod használni a funkcióit...</string>
    <string name="dialog_sync_needed_message2">Az eszköz még nem volt szinkronizálva a szerveren található adatokkal. Ellenőrizd az internetkapcsolatod és kattints a fenti Szinkronizáció gombra. Amíg nem szinkronizáltad a Táblagépet, addig nem tudod használni a funkcióit...</string>
    <string name="sync_info">Ezen a képernyőn a táblagépen található felvett adatok, illetve a <b>KITE Központi Rendszerében</b> lévő adatok szinkronizációjának az állapotát látod.\n\nAz adatokat tetszés szerint tudod fel, illetve letölteni a KITE Központi Rendszere és a Táblagéped között...\n(A \'Teljes frissítés\' opciót választva minden adatot újra letölt a szerverről))</string>
    <string name="sync_button_all">Összes adat szinkronizálása</string>
    <string name="sync_button_db">DB letöltés</string>
    <string name="sync_button_sync">Szinkronizálás</string>
    <string name="sync_client_itemcount">Elemek száma:</string>
    <string name="sync_client_itemcount_upload">Összes/feltöltendő elemek száma:</string>
    <string name="sync_client_lastupdate">Utolsó frissítés ideje:</string>
    <string name="sync_client_state_refreshing">Információk frissítése folyamatban...</string>
    <string name="sync_client_state_ok">Nincs szükség frissítésre...</string>
    <string name="sync_client_state_shoudrefresh">Javasolt a frissítés.</string>
    <string name="sync_client_state_dataavailable">Friss adat elérhető.</string>
    <string name="sync_client_state_needrefresh">Frissítés szükséges!</string>
    <string name="sync_server_state_ready">Szerver elérhető.</string>
    <string name="sync_server_state_nonetwork">Szerver nem elérhető.</string>
    <string name="sync_server_state_nowiwi">Feltöltés csak wifi-n érhető el.</string>
    <string name="sync_message_deleteall">Teljes frissítés</string>
    <string name="sync_message_delete">Törlés és frissítés</string>
    <string name="sync_message_empty">Nem volt még adatszinkronizálás.</string>
    <string name="sync_message_empty_desc">(A szinkronizációhoz ellenőrizd az internet kapcsolatod és kattints a jobb felső \'Összes adat szinkronizálása\' gombra)</string>
    <string name="sync_dialog_title">Szinkronizálás</string>
    <string name="sync_dialog_db_title">Adatbázis letöltése</string>
    <string name="sync_dialog_db_message">Letöltés kezdése...</string>
    <string name="sync_dialog_message">A(z) %1$s tábla szinkronizálása folyamatban...</string>
    <string name="sync_import_database_success">Adatbázis importálása sikeres!</string>
    <string name="sync_import_database_failed">Adatbázis importálása sikertelen!!!</string>
    <string name="sync_export_database_success">Adatbázis exportálása sikeres!</string>
    <string name="sync_export_database_failed">Adatbázis exportálása sikertelen!!!</string>
    <string name="pricelist_remove_cart_title">Kosár ürítése</string>
    <string name="st_dialog_logout_title">Kijelentkezés</string>
    <string name="st_dialog_logout_message">Biztos, hogy ki szeretne jelentkezni?</string>
    <string name="title_activity_gep">Új gép</string>
    <string name="gep_tv_new_machine">Gép rögzítése</string>
    <string name="gep_tv_workhour_limit">Üzemóra korlát:</string>
    <string name="gep_tv_name">Gép neve:</string>
    <string name="gep_tv_serial_number">Alvázszám:</string>
    <string name="gep_tv_manufacture_date">Gyártási év:</string>
    <string name="gep_tv_start_of_operation_date">Üzembe helyezés dátuma:</string>
    <string name="gep_tv_machine_hour">Gépóra állása:</string>
    <string name="gep_tv_warranty_end_date">Garancia lejárta:</string>
    <string name="gep_tv_extended_warranty">Kiterjesztett jótállás:</string>
    <string name="gep_tv_extended_warranty_short">Kiterj. jótállás:</string>
    <string name="gep_tv_service_book">Szervizkönyv</string>
    <string name="gep_dialog_title_machine_exists_title">Létező gép</string>
    <string name="gep_dialog_title_machine_exists_message">%1$s alvázszámmal már létezik gép a %2$s partnerhez rendelve.</string>
    <string name="gep_details_header">Gép részletek</string>
    <string name="gep_owner_header">Tulajdonos</string>
    <string name="gep_contract_header">Szerződések</string>
    <string name="gep_tv_owner_name">Név:</string>
    <string name="gep_tv_owner_partnercode">Partnerkód:</string>
    <string name="gep_tv_owner_address">Cím:</string>
    <string name="gep_tv_owner_location">Alközpont:</string>
    <string name="gep_tv_contract_name">Név:</string>
    <string name="gep_tv_contract_type">Típus:</string>
    <string name="gep_tv_contract_number">Szerződés szám:</string>
    <string name="gep_tv_contract_start_end">Kezdet, lejárat:</string>
    <string name="gep_tv_partner">Tulajdonos:</string>
    <string name="gep_tv_no_contract">Nincs élő szolgáltatási szerződés.</string>
    <string name="gep_btn_details">Részletek</string>
    <string name="photo_tv_name">Fájl neve:</string>
    <string name="alkatresz_tv_cikkszam">Cikkszám:</string>
    <string name="alkatresz_tv_cikknev">Cikknév:</string>
    <string name="alkatresz_tv_sorszam">Sorszám:</string>
    <string name="alkatresz_tv_mennyiseg">Mennyiség:</string>
    <string name="alkatresz_tv_mennyisegi_egyseg">Egység:</string>
    <string name="alkatresz_tv_bizonylatszam">Bizonylatszám:</string>
    <string name="munkalap_partner_header">Partner</string>
    <string name="label_contract_type">Szerződéstípus</string>
    <string name="label_contract_number">Szerz.szám</string>
    <string name="label_contract_start_date">Érv. kezdete</string>
    <string name="label_contract_end_date">Lejárat</string>
    <string name="cd_tv_customer_name">Név:</string>
    <string name="cd_tv_new_customer_header">Új Partner</string>
    <string name="cd_tv_customer_zip">Irányítószám:</string>
    <string name="cd_tv_customer_settlement">Település:</string>
    <string name="cd_tv_customer_address">Cím:</string>
    <string name="cd_tv_customer_tax">Adószám:</string>
    <string name="cd_tv_customer_tax_sign">Adóazonosító:</string>
    <string name="cd_tv_customer_phone">Telefon:</string>
    <string name="cd_tv_customer_fax">Fax:</string>
    <string name="cd_tv_customer_email">Email:</string>
    <string name="label_save_partner">Mentés</string>
    <string name="data_table_select_text">Tábla kiválasztása:</string>
    <string name="data_table_list_title">ADATOK</string>
    <string name="data_table_button_refresh">Frissítés</string>
</resources>