<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/parent"
    style="@style/ActivityStyle"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <ProgressBar
        android:id="@+id/sync_progress_loading"
        style="@style/Progress.Kite.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"/>

    <!-- Customer Data -->

    <TextView
        android:id="@+id/cd_tv_customer_header"
        style="@style/BaseTextHeader"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:text="@string/cd_tv_new_customer_header" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@+id/cd_tv_customer_header"
        android:background="@color/primary_green" />

    <!-- Name -->

    <TextView
        android:id="@+id/cd_tv_customer_name"
        style="@style/BaseTextView"
        android:layout_below="@+id/view"
        android:text="@string/cd_tv_customer_name" />

    <AutoCompleteTextView
        android:id="@+id/cd_et_customer_name"
        style="@style/BaseEditText"
        android:layout_below="@+id/view"
        android:layout_toRightOf="@+id/cd_tv_customer_name"
        android:imeOptions="actionNext"
        android:inputType="textCapWords"
        android:singleLine="true"
        android:maxLength="60"
        android:maxLines="2" />

    <TextView
        android:id="@+id/cd_tv_customer_postal"
        style="@style/BaseTextView"
        android:layout_below="@+id/cd_et_customer_name"
        android:text="@string/cd_tv_customer_zip" />

    <EditText
        android:id="@+id/cd_et_customer_postal"
        style="@style/BaseEditText"
        android:layout_below="@+id/cd_et_customer_name"
        android:layout_toRightOf="@+id/cd_tv_customer_postal"
        android:imeOptions="actionNext"
        android:inputType="number"
        android:singleLine="true"
        android:maxLength="4"
        android:maxLines="1" />

    <TextView
        android:id="@+id/cd_tv_customer_telep"
        style="@style/BaseTextView"
        android:layout_below="@+id/cd_et_customer_postal"
        android:text="@string/cd_tv_customer_settlement" />

    <AutoCompleteTextView
        android:id="@+id/cd_et_customer_telep"
        style="@style/BaseEditText"
        android:singleLine="true"
        android:layout_below="@+id/cd_et_customer_postal"
        android:layout_toRightOf="@+id/cd_tv_customer_telep"
        android:imeOptions="actionNext"
        android:inputType="textCapWords"
        android:maxLength="30"
        android:maxLines="1" />

    <!-- Address -->

    <TextView
        android:id="@+id/cd_tv_customer_address"
        style="@style/BaseTextView"
        android:layout_below="@+id/cd_et_customer_telep"
        android:text="@string/cd_tv_customer_address" />

    <EditText
        android:id="@+id/cd_et_customer_address"
        style="@style/BaseEditText"
        android:layout_below="@+id/cd_et_customer_telep"
        android:layout_toRightOf="@+id/cd_tv_customer_address"
        android:imeOptions="actionNext"
        android:singleLine="true"
        android:inputType="textCapWords"
        android:maxLength="30"
        android:maxLines="1" />

    <TextView
        android:id="@+id/cd_tv_customer_taxnum"
        style="@style/BaseTextView"
        android:layout_below="@+id/cd_et_customer_address"
        android:text="@string/cd_tv_customer_tax" />

    <EditText
        android:id="@+id/cd_et_customer_taxnum"
        style="@style/BaseEditText"
        android:layout_below="@+id/cd_et_customer_address"
        android:layout_toRightOf="@+id/cd_tv_customer_taxnum"
        android:imeOptions="actionNext"
        android:inputType="number|phone"
        android:singleLine="true"
        android:maxLength="13"
        android:maxLines="1" />

    <TextView
        android:id="@+id/cd_tv_customer_taxsign"
        style="@style/BaseTextView"
        android:layout_below="@+id/cd_tv_customer_taxnum"
        android:text="@string/cd_tv_customer_tax_sign" />

    <EditText
        android:id="@+id/cd_et_customer_taxsign"
        style="@style/BaseEditText"
        android:layout_below="@+id/cd_tv_customer_taxnum"
        android:layout_toRightOf="@+id/cd_tv_customer_taxsign"
        android:imeOptions="actionNext"
        android:inputType="number"
        android:maxLength="10"
        android:singleLine="true"
        android:maxLines="1" />
    
    <TextView
        android:id="@+id/cd_tv_customer_phone"
        style="@style/BaseTextView"
        android:layout_below="@+id/cd_tv_customer_taxsign"
        android:text="@string/cd_tv_customer_phone" />

    <EditText
        android:id="@+id/cd_et_customer_phone"
        style="@style/BaseEditText"
        android:layout_below="@+id/cd_tv_customer_taxsign"
        android:layout_toRightOf="@+id/cd_tv_customer_phone"
        android:imeOptions="actionNext"
        android:inputType="phone"
        android:maxLength="15"
        android:singleLine="true"
        android:maxLines="1" />

    <TextView
        android:id="@+id/cd_tv_customer_fax"
        style="@style/BaseTextView"
        android:layout_below="@+id/cd_et_customer_phone"
        android:text="@string/cd_tv_customer_fax" />

    <EditText
        android:id="@+id/cd_et_customer_fax"
        style="@style/BaseEditText"
        android:layout_below="@+id/cd_et_customer_phone"
        android:layout_toRightOf="@+id/cd_tv_customer_phone"
        android:imeOptions="actionNext"
        android:inputType="phone"
        android:maxLength="15"
        android:singleLine="true"
        android:maxLines="1" />

    <TextView
        android:id="@+id/cd_tv_customer_email"
        style="@style/BaseTextView"
        android:layout_below="@+id/cd_et_customer_fax"
        android:text="@string/cd_tv_customer_email" />

    <EditText
        android:id="@+id/cd_et_customer_email"
        style="@style/BaseEditText"
        android:layout_below="@+id/cd_et_customer_fax"
        android:layout_toRightOf="@+id/cd_tv_customer_email"
        android:imeOptions="actionDone"
        android:inputType="textEmailAddress"
        android:maxLength="60"
        android:singleLine="true"
        android:maxLines="1" />

    <Button
        android:id="@+id/cd_btn_new"
        style="@style/MainMenuButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:paddingBottom="45dp"
        android:paddingLeft="60dp"
        android:paddingRight="65dp"
        android:paddingTop="35dp"
        android:text="@string/label_save_partner" />

</RelativeLayout>