<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_background"
    android:focusableInTouchMode="true"
    android:minWidth="1000dp"
    android:minHeight="600dp"
    android:id="@+id/parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/dialog_header"
        android:layout_width="match_parent"
        android:layout_height="44dip"
        android:background="#00000000"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/dialog_icon"
            android:layout_width="27dip"
            android:layout_height="27dip"
            android:layout_gravity="left|center_vertical"
            android:layout_margin="3dip"
            android:paddingLeft="5dip"
            android:scaleType="fitCenter"
            android:src="@drawable/kite_icon" />

        <TextView
            android:id="@+id/dialog_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:gravity="left|center_vertical"
            android:paddingBottom="1dip"
            android:paddingLeft="5dip"
            android:paddingRight="14dip"
            android:paddingTop="2dip"
            android:text="@string/dummy_text"
            android:textColor="#005500"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dip"
        android:layout_marginBottom="0dp"
        android:background="@drawable/dialog_panel_background"
        android:orientation="vertical"
        android:layout_weight="1">

        <LinearLayout
            android:id="@+id/dialog_layout_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dip"
            android:layout_marginTop="7dip"
            android:orientation="horizontal"
            android:layout_weight="0">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1.6"
                android:layout_height="wrap_content"
                style="@style/BaseEditText"
                android:text="@string/munkalap_partner_header"/>

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1.2"
                android:layout_height="wrap_content"
                style="@style/BaseEditText"
                android:text="@string/label_contract_type"/>

            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.4"
                android:layout_height="wrap_content"
                style="@style/BaseEditText"
                android:text="@string/label_contract_number"/>

            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.45"
                android:layout_height="wrap_content"
                style="@style/BaseEditText"
                android:text="@string/label_contract_start_date"/>

            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.35"
                android:layout_height="wrap_content"
                style="@style/BaseEditText"
                android:text="@string/label_contract_end_date"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_below="@id/gep_header"
            android:background="@color/primary_green" />

        <ListView
            android:id="@+id/contract_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginRight="4dp"
            android:focusable="false">
        </ListView>

        <LinearLayout
            android:id="@+id/dialog_layout_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dip"
            android:layout_marginTop="5dip"
            android:layout_weight="0">

            <Button
                android:id="@+id/dialog_button_right"
                style="@style/DialogPrimary.Kite"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:text="@string/dialog_close" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>